--- a/TUBES/app/src/main/res/layout/list_item_font_size.xml
+++ b/TUBES/app/src/main/res/layout/list_item_font_size.xml
@@ -3,24 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
-
+    android:translationZ="99dp"
+    android:background="@color/white"
     android:padding="10dp">
-
     <ImageView
-
         android:id="@+id/close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="end"
-        android:src="@android:drawable/ic_menu_close_clear_cancel" />
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:layout_marginBottom="5dp"
+        />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:background="@color/gray_ef"
         android:text="Large"
         android:textAllCaps="false"
         android:textSize="20dp" />
@@ -31,7 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonLarge"
         android:layout_marginBottom="10dp"
-        android:background="@color/gray_ef"
         android:text="Medium"
         android:textAllCaps="false"
         android:textSize="20dp" />
@@ -41,7 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonMedium"
-        android:background="@color/gray_ef"
         android:text="Small"
         android:textAllCaps="false"
         android:textSize="20dp" />
