--- a/TUBES/app/src/main/res/values-night/themes.xml
+++ b/TUBES/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
 
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/darkgrey</item>
 
         <item name="colorSecondary">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
