--- a/TUBES/app/src/main/res/values/colors.xml
+++ b/TUBES/app/src/main/res/values/colors.xml
@@ -15,4 +15,10 @@
     <color name="light_blue">#aecbfa</color>
     <color name="gray_ef">#7Fefefef</color>
     <color name="transparent">#00000000</color>
+    <color name="lavender">#8692f7</color>
+    <color name="grey">#aaa</color>
+    <color name="darkgrey">#ff424242</color>
+    <color name="lightgray">#D3D3D3</color>
+
+
 </resources>
