--- a/TUBES/app/src/main/res/layout/fragment_detail.xml
+++ b/TUBES/app/src/main/res/layout/fragment_detail.xml
@@ -21,8 +21,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/text_file"
-            android:text="File"
+            android:id="@+id/text_title"
+            android:text="Title"
             android:textSize="20dp"
             android:textStyle="bold"
             android:fontFamily="sans-serif-thin"
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/photo_name"
-            android:hint="photo.jpg"
+            android:hint="Photo"
             android:textColorHint="@color/gray"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -130,15 +130,5 @@
         android:textColorHint="@color/gray"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/btn_edit"
-        android:layout_margin="15dp"
-        android:src="@android:drawable/ic_menu_edit"
-        android:backgroundTint="@color/orange"/>
 
 </RelativeLayout>
