--- a/TUBES/app/src/main/res/layout/activity_main.xml
+++ b/TUBES/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
         <androidx.fragment.app.FragmentContainerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/fragment_container"
-            android:layout_below="@id/toolbar"/>
+            android:id="@+id/fragment_container" />
     </LinearLayout>
 
     <RelativeLayout
