--- a/TUBES/app/src/main/res/layout/fragment_detail.xml
+++ b/TUBES/app/src/main/res/layout/fragment_detail.xml
@@ -31,7 +31,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-thin"
-                android:text="Title"
+                android:text="@string/title2"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -79,7 +79,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-thin"
-                android:hint="..............."
+                android:hint="@string/hint_detail"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:textSize="20dp"
@@ -95,7 +95,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-thin"
-            android:text="Description"
+            android:text="@string/description_det"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -107,7 +107,7 @@
             android:layout_below="@id/text_description"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:hint="Description..."
+            android:hint="@string/description_det_hint"
             android:textColor="@color/black"
             android:textColorHint="@color/gray" />
 
@@ -132,7 +132,7 @@
             android:layout_below="@id/text_story"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:hint="Story..."
+            android:hint="@string/story"
             android:textColor="@color/black"
             android:textColorHint="@color/gray" />
 
